--- a/SuicaPasmoReader/build.gradle
+++ b/SuicaPasmoReader/build.gradle
@@ -36,4 +36,5 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile project(':nfc-felica-lib')
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
