--- a/SuicaPasmoReader/build.gradle
+++ b/SuicaPasmoReader/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile project(':nfc-felica-lib')
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.google.android.gms:play-services:3.1.36'
 }
