--- a/SuicaPasmoReader/build.gradle
+++ b/SuicaPasmoReader/build.gradle
@@ -37,5 +37,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile project(':nfc-felica-lib')
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.google.android.gms:play-services:3.1.36'
+    compile 'com.google.android.gms:play-services:4.+'
+    compile 'com.google.apis:google-api-services-drive:v2-rev96-1.16.0-rc'
+    compile 'com.google.http-client:google-http-client-gson:1.16.0-rc'
+    compile 'com.google.api-client:google-api-client-android:1.16.0-rc'
+    compile 'com.android.support:support-v4:13.0.0'
 }
