--- a/SuicaPasmoReader/src/main/AndroidManifest.xml
+++ b/SuicaPasmoReader/src/main/AndroidManifest.xml
@@ -25,8 +25,18 @@
                 android:name="android.nfc.action.TAG_DISCOVERED"
                 android:resource="@xml/nfc_filter" />
         </activity>
+        <activity
+            android:name="jp.caliconography.suicapasmoreader.DriveHelper"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
     <uses-permission android:name="android.permission.NFC" />
     <uses-feature android:name="android.hardware.nfc" android:required="true" />
-
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
