--- a/SuicaPasmoReader/src/main/AndroidManifest.xml
+++ b/SuicaPasmoReader/src/main/AndroidManifest.xml
@@ -8,17 +8,17 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 
-    <application
+    <application  android:debuggable="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
             android:name="jp.caliconography.suicapasmoreader.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <meta-data
@@ -28,11 +28,11 @@
         <activity
             android:name="jp.caliconography.suicapasmoreader.DriveHelper"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
     </application>
     <uses-permission android:name="android.permission.NFC" />
