--- a/SuicaPasmoReader/src/main/AndroidManifest.xml
+++ b/SuicaPasmoReader/src/main/AndroidManifest.xml
@@ -46,4 +46,6 @@
     <uses-feature android:name="android.hardware.nfc" android:required="true" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
