--- a/SuicaPasmoReader/build.gradle
+++ b/SuicaPasmoReader/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.google.api-client:google-api-client-android:1.16.0-rc'
     compile 'com.android.support:support-v4:13.0.0'
     compile 'com.google.gdata:core:1.47.1'
+    compile 'org.apache.poi:poi-ooxml:3.9'
 }
