--- a/SuicaPasmoReader/build.gradle
+++ b/SuicaPasmoReader/build.gradle
@@ -36,12 +36,12 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile project(':nfc-felica-lib')
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.google.android.gms:play-services:4.+'
-    compile 'com.google.apis:google-api-services-drive:v2-rev96-1.16.0-rc'
-    compile 'com.google.http-client:google-http-client-gson:1.16.0-rc'
-    compile 'com.google.api-client:google-api-client-android:1.16.0-rc'
+//    compile fileTree(dir: 'libs', include: '*.jar')
+//    compile 'com.google.android.gms:play-services:4.+'
+//    compile 'com.google.apis:google-api-services-drive:v2-rev96-1.16.0-rc'
+//    compile 'com.google.http-client:google-http-client-gson:1.16.0-rc'
+//    compile 'com.google.api-client:google-api-client-android:1.16.0-rc'
     compile 'com.android.support:support-v4:13.0.0'
-    compile 'com.google.gdata:core:1.47.1'
-    compile 'org.apache.poi:poi-ooxml:3.9'
+//    compile 'com.google.gdata:core:1.47.1'
+    compile 'org.apache.poi:poi:3.9'
 }
