--- a/SuicaPasmoReader/build.gradle
+++ b/SuicaPasmoReader/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
+        classpath 'com.android.tools.build:gradle:0.7.+'
     }
 }
 apply plugin: 'android'
@@ -34,14 +34,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:support-v4:13.0.+'
+    compile 'com.android.support:appcompat-v7:18.0.+'
     compile project(':nfc-felica-lib')
 //    compile fileTree(dir: 'libs', include: '*.jar')
 //    compile 'com.google.android.gms:play-services:4.+'
 //    compile 'com.google.apis:google-api-services-drive:v2-rev96-1.16.0-rc'
 //    compile 'com.google.http-client:google-http-client-gson:1.16.0-rc'
 //    compile 'com.google.api-client:google-api-client-android:1.16.0-rc'
-    compile 'com.android.support:support-v4:13.0.0'
 //    compile 'com.google.gdata:core:1.47.1'
     compile 'org.apache.poi:poi:3.9'
 }
