--- a/SuicaPasmoReader/build.gradle
+++ b/SuicaPasmoReader/build.gradle
@@ -34,14 +34,19 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:13.0.+'
+    compile 'com.android.support:support-v4:18.0.0'
     compile 'com.android.support:appcompat-v7:18.0.+'
+
+    // You must install or update the Google Repository through the SDK manager to use this dependency.
+    // The Google Repository (separate from the corresponding library) can be found in the Extras category.
+    // compile 'com.google.android.gms:play-services:4.+'
+//    compile 'com.google.gdata:core:1.47.1'
+    compile 'org.apache.poi:poi:3.9'
     compile project(':nfc-felica-lib')
 //    compile fileTree(dir: 'libs', include: '*.jar')
-//    compile 'com.google.android.gms:play-services:4.+'
+//    
 //    compile 'com.google.apis:google-api-services-drive:v2-rev96-1.16.0-rc'
 //    compile 'com.google.http-client:google-http-client-gson:1.16.0-rc'
 //    compile 'com.google.api-client:google-api-client-android:1.16.0-rc'
-//    compile 'com.google.gdata:core:1.47.1'
-    compile 'org.apache.poi:poi:3.9'
+//
 }
